# VST_Plugin

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py  generate_documentation.py  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  default.yml  request.yml
.github/automation_scripts/: exec_script.py  graphql_api.py
.github/config/: labels.yml  release-drafter.yml
.github/workflows/: build-docs.yml  build.yml  compliance-checks.yml  documentation.yml  publish-docs.yml  release-drafter.yml  release.yml  sync-labels.yml
.reuse/: dep5
.reuse/templates/: gpl3.jinja2  gpl3_src.commented.jinja2
config/: pluginfo.xml
config/dep/conan/: linux.conanprofile  windows.conanprofile
config/dep/conan/profiles/: linux.conanprofile  windows2019.conanprofile
docs/doxygen/: install_doxygen.py
src/: CMakeLists.txt  CMakeUserPresets.json  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  main.cpp
src/JUCE/: install_juce.py
src/components/: ADSRComponent.cpp  ADSRComponent.h  AddSynthComponent.cpp  AddSynthComponent.h  QuantumComponent.cpp  QuantumComponent.h
src/synth/: AdditiveSynth.cpp  AdditiveSynth.h  QuantumEffects.cpp  QuantumEffects.h  SineGenerator.cpp  SineGenerator.h
src/util/: SoundProcessor.cpp  SoundProcessor.h
